opam-version: "2.0"
maintainer: "Daniel Bünzli <daniel.buenzl i@erratique.ch>"
authors: ["Daniel Bünzli <daniel.buenzl i@erratique.ch>"]
homepage: "http://erratique.ch/software/topkg"
doc: "http://erratique.ch/software/topkg/doc"
license: "ISC"
dev-repo: "git+http://erratique.ch/repos/topkg.git"
bug-reports: "https://github.com/dbuenzli/topkg/issues"
tags: ["packaging" "ocamlbuild" "org:erratique"]
depends: [
  "ocaml" {>= "4.01.0"}
  "ocamlfind" {build & >= "1.6.1"}
  "ocamlbuild"
  "topkg" {= "1.0.0"}
  "result"
  "fmt"
  "logs"
  "bos" {>= "0.1.5"}
  "cmdliner" {>= "1.0.0"}
  "webbrowser"
  "opam-format" {>= "2.0.0"}
]
build:[
  "ocaml" "pkg/pkg.ml" "build"
          "--pkg-name" name
          "--dev-pkg" "%{pinned}%"
]